# judicial-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  server.py  start.bat
.claude/: settings.json
.claude/rules/: evidence-chain.md  graph.md
corpus/: README.md  criminal_law_key_articles.md  criminal_law_key_articles.meta.yaml  criminal_procedure_evidence.md  criminal_procedure_evidence.meta.yaml  electronic_data_rules.md  electronic_data_rules.meta.yaml  exclusion_illegal_evidence.md  exclusion_illegal_evidence.meta.yaml
eval/: golden_cases.json  golden_cases_to_label.json  harness.py  langsmith_eval.py
scripts/: append_examples.py  build_vector_index.py  download_cail2018.py  download_pdp_bench.py  embed_and_index.py  extract_for_labeling.py  fix_json.py  generate_sample_data.py  import_cail_cases.py  import_cases.py  import_to_db.py  label_cases.py  rebuild_golden.py  upload_dataset.py
src/judicial_evidence_agent/: __init__.py
src/judicial_evidence_agent/api/: main.py  models.py
src/judicial_evidence_agent/core/: __init__.py  case_annotator.py  config.py  contracts.py  db_schema.py  evidence_chain.py  graph.py  guardrails.py  llm.py  observe.py  retrieval.py  text_sanitizer.py
tests/: test_retrieval.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ConfidencePanel.tsx  EvidenceGraph.tsx  Sidebar.tsx
ui/src/lib/: api.ts
ui/src/pages/: Analysis.tsx  CaseDetail.tsx  CaseList.tsx  EvidenceViewer.tsx  HumanReview.tsx  MaterialUpload.tsx  ReportView.tsx
(+19 files in other folders)
