[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "judicial-evidence-agent"
version = "0.1.0"
description = "多模态证据链 Agent — 面向公检法场景的证据材料接入、解析、图谱构建与可溯源报告生成"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.28",
    "pgvector>=0.3",
    "networkx>=2.8",
    "anthropic>=0.30",
    "chromadb>=0.5",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "langsmith>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/judicial_evidence_agent"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
